# niceuv

./: .gitignore  404.html  apply_corrections.py  database.py  find_text_str.py  game_plot_ug.py  game_plot_ug_back.py  index.html  luf_editor.py  lulu2_deepl.py  lulu3_deepl.py  main.py  manula_to_mkdocs.py  mdel_wrapper.py  mkdocs.yml  model_wrap_budget.py  pol_db_to_xlsx.py  pyproject.toml  sitemap.xml  state.py  tb2_claude.py  test_arch.py  tmanula.py  tmanula_ug.py  toy.py  toy_back.py  trans_from_clean_luf.py  translate_manula.py  translate_md.py  translate_test.py  ugregmod.py
.claude/: settings.local.json
404/: index.html
assets/css/: custom.css
corrections/: corrections_de_inf.json
de/cancel-debt-from-public-lenders/: index.html
de/carbon-tax-vs-cap-and-trade-example/: index.html
de/ccs-is-carbon-capture-and-storage-at-source/: index.html
de/change-diets/: index.html
de/direct-air-capture/: index.html
de/education-to-all/: index.html
de/electrify-everything/: index.html
de/emissions-and-temperature/: index.html
de/energy-system-efficiency/: index.html
de/engage-players-in-conversation-discussion-and-negotiation/: index.html
de/expand-policy-space/: index.html
de/extra-taxes-paid-by-the-super-rich/: index.html
de/female-leadership/: index.html
de/gameplay/: index.html
docs/: 404.md  index.md
files/: CRK-139_plot25_40.npy  CRK-139_plot25_60.npy  CRK-139_ro40.npy  CRK-139_ro60.npy  luf.py  luf_before_de_inf.py  luf_clean.py  luf_original.py
scratch/: del_games_in_db.py
search/: search_index.json
site/: 404.html  sitemap.xml
(+320 files in other folders)
