[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepl>=1.28.0",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-static-i18n>=1.3.1",
    "nicegui>=3.7.1",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "python-docx>=1.2.0",
]
